# rust-NN-1_layer

./: Cargo.toml  README.md
src/: app.rs  class_expectation.rs  lib.rs  main.rs  nn.rs  perceptron.rs  util.rs
src/util/: bool_expect.rs  bool_expectation.rs  int_expect.rs  one_absorbing_subtractions.rs
