[package]
name = "perc_ic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iris_classifier"
path = "./src/main.rs"

[dependencies]
iris_classifier = "2.0.0" # by Tomasz Nehring

derive_more = "0.99.17"
nalgebra = "0.32.4"
num-rational = "0.4.1"
num-traits = "0.2.18"
rayon = "1.9.0"
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.81"
tabled = "0.15.0"

[profile.comp_time]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
