
[package]
name = "perc_ic"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "iris_classifier"
path = "./src/main.rs"

[features]
default = ["student_impls"]
student_impls = []

[dependencies]
iris_classifier = {version = "2.2.0", default_features = false} # by Tomasz Nehring

derive_more = "0.99.17"
nalgebra = "0.32.4"
num-rational = "0.4.1"
num-traits = "0.2.18"
rayon = "1.9.0"
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.81"
tabled = "0.15.0"
rand = "0.8.5"
cfg-if = "1.0.0"

[profile.comp_time]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
